and keep track of all directory-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

23-Feb-2015  T.Nikitina            (geom-specific-V10-00-12)
- Fix in SetOriginalParameters() for G4Polycone and G4Polyhedra, in case
  of presence of 'rings' structures. Addressing problem report #1705.

26-Jan-2015  G.Cosmo
- Renamed DistanceAwayForInside() to DistanceAway() and use polymorphism.

26-Jan-2015  T.Nikitina
- Added special method for Inside 'DistanceAwayForInside()' in order to fix 
  precision problem of calculation of DistanceToSide() in G4PolyconeSide. 

21-Jan-2015  T.Nikitina
- Fixed triangularisation method AddGeneralPOlygoneFacets() in
  G4ExtrudedSolid by avoiding flat triangles.
- Added warning message to G4TriangularFacet constructor if Area is 0;
  i.e., case of flat triangle.
- Addressing problem report #1703.

12-Dec-2014  G.Cosmo
- Use canonical form for operator=() in G4PolyconeHistorical and
  G4PolyhedraHistorical.

17-Sep-2014  G.Cosmo               (geom-specific-V10-00-11)
- Added wrappers for UExtrudedSolid and UGenericTrap; adapted switches to
  original G4 types accordingly. Requires tag "geom-usolids-V10-00-16".

01-Sep-2014  G.Cosmo               (geom-specific-V10-00-10)
- Fixed use of polyhedron pointer, to avoid race condition in MT
  when parameterised volumes are visualised.

22-May-2014  G.Cosmo               (geom-specific-V10-00-09)
- Added protection in generic constructor of G4Polyhedra for the case when
  improper number of sides is given as input.

10-Apr-2014  G.Cosmo               (geom-specific-V10-00-08)
- Get rid of deprecated 'register' storage class specifier in source files.

31-Mar-2014  G.Cosmo               (geom-specific-V10-00-07)