@@ -134,8 +134,8 @@ G4Polyhedron* G4UGenericTrap::CreatePolyhedron() const
       G4double Dx,Dy;
       UVector3 minBox = GetShape()->GetMinimumBBox();
       UVector3 maxBox = GetShape()->GetMaximumBBox();
-      G4ThreeVector minVec(minBox.x, minBox.y, minBox.z);
-      G4ThreeVector maxVec(maxBox.x, maxBox.y, maxBox.z);
+      G4ThreeVector minVec(minBox.x(), minBox.y(), minBox.z());
+      G4ThreeVector maxVec(maxBox.x(), maxBox.y(), maxBox.z());
       Dx = 0.5*(maxVec.x()- minVec.y());
       Dy = 0.5*(maxVec.y()- minVec.y());
       if (Dy > Dx)  { Dx=Dy; }
